--- a/Website/public/style.css
+++ b/Website/public/style.css
@@ -4,11 +4,11 @@ body{
 }
 
 .testcase{
+    position: relative;
     text-align: center;
     width:60%;
     max-width: 1000px;
     margin:0 auto;
-
 }
 
 .testcase h1{
@@ -20,7 +20,7 @@ body{
     position: relative;
     width:100%;
     height:300px;
-    background-color:antiquewhite;
+    background-color:rgb(253, 243, 229);
     border-radius: 10px;
     align-items: flex-end;
 }
@@ -49,3 +49,36 @@ body{
     right:0;
     top:-50px;
 }
+
+.text_list{
+    position: relative;
+    padding:0;
+    margin:0;
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.text_list_item{
+    list-style-type: none;
+    font-size:18px;
+}
+
+.text_list a{
+    text-decoration: none;
+    color:black;
+}
+
+.text_list a:hover{
+    text-decoration: underline;
+}
+
+.testcase{
+    margin-top:50px;
+}
+
+@media only screen and (max-width: 600px) {
+    .testcase{
+        width:95%;
+    }
+  }
